syntax = "proto3";

package main;

option go_package = "./proto";

// 添加专题分类
message AddSubjectCategoryReq {
  int64 id = 1; //主键ID
  string name = 2; //专题分类名称
  string icon = 3; //分类图标
  int32 subject_count = 4; //专题数量
  int32 show_status = 5; //显示状态：0->不显示；1->显示
  int32 sort = 6; //排序
  string create_by = 7; //创建者
}

message AddSubjectCategoryResp {
  string pong = 1;
}

// 删除专题分类
message DeleteSubjectCategoryReq {
  repeated int64 ids = 1;
}

message DeleteSubjectCategoryResp {
  string pong = 1;
}

// 更新专题分类
message UpdateSubjectCategoryReq {
  int64 id = 1; //主键ID
  string name = 2; //专题分类名称
  string icon = 3; //分类图标
  int32 subject_count = 4; //专题数量
  int32 show_status = 5; //显示状态：0->不显示；1->显示
  int32 sort = 6; //排序
  string update_by = 9; //更新者
}

message UpdateSubjectCategoryResp {
  string pong = 1;
}

// 更新专题分类状态
message UpdateSubjectCategoryStatusReq {
  repeated int64 ids = 1; //主键ID
  int32 show_status = 5; //显示状态：0->不显示；1->显示
  string update_by = 9; //更新者
}

message UpdateSubjectCategoryStatusResp {
  string pong = 1;
}

// 查询专题分类详情
message QuerySubjectCategoryDetailReq {
    int64 id = 1;
}

message QuerySubjectCategoryDetailResp {
  int64 id = 1; //主键ID
  string name = 2; //专题分类名称
  string icon = 3; //分类图标
  int32 subject_count = 4; //专题数量
  int32 show_status = 5; //显示状态：0->不显示；1->显示
  int32 sort = 6; //排序
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间

}

// 分页查询专题分类列表
message QuerySubjectCategoryListReq {
  string name = 1; //专题分类名称
  string icon = 2; //分类图标
  int32 subject_count = 3; //专题数量
  int32 show_status = 4; //显示状态：0->不显示；1->显示
  int32 page_num = 5; //第几页
  int32 page_size = 6; //每页的数量
}

message SubjectCategoryListData {
  int64 id = 1; //主键ID
  string name = 2; //专题分类名称
  string icon = 3; //分类图标
  int32 subject_count = 4; //专题数量
  int32 show_status = 5; //显示状态：0->不显示；1->显示
  int32 sort = 6; //排序
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间

}

message QuerySubjectCategoryListResp {
  int64 total = 1;
  repeated  SubjectCategoryListData list = 2;
}

// 专题分类
service SubjectCategoryService {
  // 添加专题分类
  rpc AddSubjectCategory(AddSubjectCategoryReq) returns (AddSubjectCategoryResp){}
  // 删除专题分类
  rpc DeleteSubjectCategory(DeleteSubjectCategoryReq) returns (DeleteSubjectCategoryResp){}
  // 更新专题分类
  rpc UpdateSubjectCategory(UpdateSubjectCategoryReq) returns (UpdateSubjectCategoryResp ){}
  // 更新专题分类状态
  rpc UpdateSubjectCategoryStatus(UpdateSubjectCategoryStatusReq) returns (UpdateSubjectCategoryStatusResp ){}
  // 查询专题分类详情
   rpc QuerySubjectCategoryDetail(QuerySubjectCategoryDetailReq) returns (QuerySubjectCategoryDetailResp){}
  // 查询专题分类列表
  rpc QuerySubjectCategoryList(QuerySubjectCategoryListReq) returns (QuerySubjectCategoryListResp){}


}
